--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "react-metismenu",
+  "name": "@lorhansohaky/react-metismenu",
   "version": "1.4.0",
   "description": "A ready / simple to use, highly customizable, updateable, ajax supported, animated and material designed menu component for React",
-  "main": "lib/index.js",
+  "main": "dist/react-metismenu.js",
+  "private": false,
   "scripts": {
-    "dev-server": "webpack-dev-server --config webpack/dev.conf.js --progress --colors --hot --inline",
-    "start": "npm run dev-server",
-    "build-demo": "rm -rf demo && mkdir demo && cp dev/{index.html,style.css} demo && webpack --config webpack/demo.conf.js --progress --colors",
-    "build-dist-js-min": "webpack --config webpack/dist-min.conf.js --progress --colors",
-    "build-dist-js": "webpack --config webpack/dist.conf.js --progress --colors",
-    "build-dist-css-min": "cleancss -o dist/react-metismenu-standart.min.css dist/react-metismenu-standart.css",
-    "build-dist-css": "lessc less/standart.less dist/react-metismenu-standart.css",
-    "build-lib": "rm -rf lib && babel src -d lib",
-    "build-dist": "rm -rf dist && npm run build-dist-js && npm run build-dist-js-min && npm run build-dist-css && npm run build-dist-css-min",
-    "build": "npm run build-lib && npm run build-dist",
-    "lint-confs": "eslint webpack __tests__ --ext=jsx --ext=js",
-    "lint-src": "eslint src --ext=jsx --ext=js",
-    "lint-dev": "eslint dev --ext=jsx --ext=js",
+    "start": "webpack-dev-server --config webpack/dev.conf.js",
+    "build": "webpack",
     "unit-test": "jest",
     "coverage": "jest --coverage",
     "coveralls": "coveralls < coverage/lcov.info",
-    "_test": "npm run lint-confs && npm run lint-src && npm run coverage",
     "test": "npm run lint-src && npm run coverage"
   },
   "jest": {
@@ -50,44 +39,39 @@
   "author": "H.Alper Tuna <halpertuna@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/alpertuna/react-metismenu/issues"
+    "url": "https://github.com/LorhanSohaky/react-metismenu/issues"
   },
-  "homepage": "https://github.com/alpertuna/react-metismenu#readme",
+  "homepage": "https://github.com/LorhanSohaky/react-metismenu#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "clean-css-cli": "^4.1.10",
-    "coveralls": "^3.0.0",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.2.1",
-    "less": "^3.0.0-alpha.3",
-    "less-loader": "^4.0.5",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "clean-css-cli": "^5.6.3",
+    "coveralls": "^3.1.1",
+    "css-loader": "^6.10.0",
+    "jest": "^29.7.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "less-plugin-clean-css": "^1.5.1",
-    "react": "^16.0.0",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.7.1",
-    "webpack-dev-server": "^2.9.2"
+    "node-sass": "^9.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-test-renderer": "^17.0.0",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2"
   },
   "peerDependencies": {
-    "react": "^0.14.9 || >=15.3.0",
-    "react-dom": "^0.14.9 || >=15.3.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "prop-types": "^15.6.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.6.0",
+    "classnames": "^2.5.1",
+    "prop-types": "^15.8.1",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
     "simple-ajax": "^2.6.0"
   }
 }
